--- a/app/src/main/res/layout/lv_countries_row.xml
+++ b/app/src/main/res/layout/lv_countries_row.xml
@@ -59,7 +59,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivFlag" />
 
-    <Button
+<!--    <Button
         android:id="@+id/button_choose_first_country"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,6 +67,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCapital" />
+        app:layout_constraintTop_toBottomOf="@id/tvCapital" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
