--- a/app/src/main/res/layout/final_activity.xml
+++ b/app/src/main/res/layout/final_activity.xml
@@ -4,4 +4,4 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinalWin" />
+    tools:context=".ui.last.FinalWin" />
